# workshop_estrutura_dados

./: README.md  main.py  pyproject.toml
app/pipeline/: extract.py  transform.py
tests/: test_pipeline.py
